<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <TextView
        android:id="@+id/infomsg"
        android:layout_width="292dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="44dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/infomsg"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/landingPageImage"
        android:layout_width="360dp"
        android:layout_height="301dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="-15dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/landingpageimg"
        app:layout_constraintBottom_toTopOf="@+id/infomsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        app:srcCompat="@drawable/landingpage1"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcomemsg"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="377dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/generalmsg"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#F095FF"
        android:text="@string/continuebtn"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagevector"
        android:layout_width="169dp"
        android:layout_height="164dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/vectorimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagevector"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>