<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imagevector"
        android:layout_width="169dp"
        android:layout_height="164dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/vectorimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagevector"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/landingPageImage"
        android:layout_width="259dp"
        android:layout_height="225dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-15dp"
        android:contentDescription="@string/landingpageimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginimg"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcomemsg1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingPageImage"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="224dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/generalmsg1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/signupinfo"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/signupinfo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="10dp"
        android:gravity="clip_horizontal|center"
        android:text="Sign Up"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/signupinfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#F095FF"
        android:text="Login"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
