<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rightimagevector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AF095FF"
    tools:context=".CreditScoreActivity">

    <ImageView
        android:id="@+id/meterImageView"
        android:layout_width="253dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/credit_score_meter"
        android:rotation="0"
        android:src="@drawable/creditmeter"
        app:layout_constraintBottom_toTopOf="@+id/creditScoreTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/creditScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/meterImageView"
        app:layout_constraintStart_toStartOf="@+id/meterImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="#f095ff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu"
        tools:ignore="VisualLintBottomNav" />


    <ImageView
        android:id="@+id/needle"
        android:layout_width="97dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/creditmeter"
        android:rotation="0"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="@drawable/needle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rightimagevector"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="112dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Credit Score"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="50dp"
        android:gravity="clip_horizontal|center"
        android:text="Your Score updated by +20"
        android:textColor="#2E7D32"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/meterImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/refreshbtn"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:backgroundTint="#F095FF"
        android:text="Refresh Score"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
