<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Mobile Number"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imagevector"
        android:layout_width="169dp"
        android:layout_height="164dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@string/vectorimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagevector"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="224dp"
        android:layout_height="37dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/please_fill_the_input_below"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/signininfo"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:gravity="clip_horizontal|center"
        android:text="@string/already_have_a_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginEnd="80dp"
        android:gravity="clip_horizontal|center"
        android:text="Sign In"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/register"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:backgroundTint="#F095FF"
        android:text="Register"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/signininfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>